--- a/ML_final_project_report.Rmd
+++ b/ML_final_project_report.Rmd
@@ -1352,7 +1352,7 @@ On test set 1, the models predict the inflation path of the 3 randomly chosen co
 
 # 5 - CONCLUSION
 
-This project conducts an analysis of predicting inflation rate of various countries using Google Trend search data on different keywords related to inflation. The keywords were chosen using the most repeated words from various articles related to inflation published in the US. Machine learning models were implemented to conduct the predictions. Although some model adjustments are suggested for future projects, the results are promising and provide a fairly good prediction of inflation path for the set where some information on inflation is given. 
+This project conducts an analysis of predicting inflation rate of various countries using Google Trend search data on different keywords related to inflation. The keywords were chosen using the most repeated words from various articles related to inflation published in the US. Machine learning models were implemented to conduct the predictions. The findings suggest that the prediction accuracy is better for more flexible models. Boosted tree has the lowest RMSE on the training data, KNN has the lowest RMSE on test set 1 and random forest has the lowest RMSE on test set 2. Although some model adjustments are suggested for future projects, the results are promising and provide a fairly good prediction of inflation path for the set where some information on inflation is given. 
 
 As discussed earlier, the accuracy of this model can be improved in many ways. For instance, one can implement ML models that are more appropriate to time series data to account for serial correlation. Using keywords from the local language (Eg: Brazil: Portuguese, Mexico: Spanish) can also greatly improve the prediction accuracy of the models because they can account for the country level shocks that can affect inflation. Finally, adding more keywords from longer period of time can also account for the different events that can affect inflation rate in the long run.
 
